test/libsolidity/syntaxTests/freeFunctions/free_function_modifier.sol
function fun() someModifier {
}
// ----
// DeclarationError 7576: (15-27): Undeclared identifier.
